tests/baselines/reference/jsFileCompilationTypeAliasSyntax.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,1): error TS8008: 'type aliases' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    type a = b;
    ~~~~~~~~~~~
!!! error TS8008: 'type aliases' can only be used in a .ts file.